--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,6 @@
 /**app.wxss**/
+@import "colorui/main.wxss";
+@import "colorui/icon.wxss";
 .container {
   height: 100%;
   display: flex;
@@ -7,4 +9,8 @@
   justify-content: space-between;
   padding: 200rpx 0;
   box-sizing: border-box;
+}
+.logo-bottom{
+  opacity: 0.7;
+  width: 100%;
 }
