--- a/pages/index/adminLog/adminlog.wxml
+++ b/pages/index/adminLog/adminlog.wxml
@@ -3,7 +3,7 @@
 <image class="logo" src='../../../imgs/painter.png'></image>
 <view class="inputView"> 
   <image class="nameImage" src="../../../imgs/user.png"></image> 
-  <input class="inputText" placeholder="请输入登陆码" bindinput="" /> 
+  <input class="inputText" placeholder="请输入登陆码" value='{{code}}' bindinput="" /> 
  </view>  
  <view class='other'><label class='blue'>忘记登录码</label>   |   <label class='blue' bindtap='register'>立即注册</label></view>
  <view class="loginBtnView"> 
