--- a/pages/rookie/me/index.wxml
+++ b/pages/rookie/me/index.wxml
@@ -1,30 +1,51 @@
 <!--pages/admin/index.wxml-->
 
- <view class='page'>
- <view class='blue-back blue'></view>
- <view class='blue'>
- <open-data type="userAvatarUrl" class="userinfo" id="userinfo"></open-data>
-  <view class='text-xl'>
-    <open-data type="userNickName" lang="zh_CN"></open-data>    
- </view>
-  </view>
-  <view class="padding flex text-center text-grey bg-white  blo">
-    <view class="flex flex-sub flex-direction solid-right">
-      <view class="text-xxl text-orange">15</view>
-      <view class="margin-top-sm">
-        <text class="cuIcon-attentionfill"></text> View</view>
+<!-- <text>pages/test/test.wxml</text> -->
+<view class='header'>
+    <view class='avatarCircle'>
+        <open-data class="userinfo-avatar" type="userAvatarUrl"></open-data>
     </view>
-    <view class="flex flex-sub flex-direction solid-left">
-      <view class="text-xxl text-green">20</view>
-      <view class="margin-top-sm">
-        <text class="cuIcon-fork"></text> Fork</view>
+    <view class='avatarWave' animation="{{waveAnimation}}"></view>
+    <view class='ractangle'>
+        <open-data class='userinfo-nickname' type="userNickName" lang="zh_CN"></open-data>
     </view>
-  </view>
-   
+    <view class='triangle'></view>
+    <view class='header-shadow'></view>
 </view>
 
-
-
+ <view class="cu-list grid col-blue no-border mid-button">
+    <view class="cu-item bloc">
+      <view class="cuIcon-text text-blue ">
+      </view>
+      <text>我的报名</text>
+    </view>
+    <view class="cu-item bloc">
+      <view class="cuIcon-my text-blue">
+      </view>
+      <text>我的面试</text>
+    </view>
+  </view>
+    <view class="cu-list menu card-menu margin-top-xl margin-bottom-xl shadow-lg radius mid-button">
+    <view class="cu-item arrow">
+      <view class="content bind" bindtap="" >
+        <text class="cuIcon-profile text-grey"></text>
+        <text class="text-black txt">个人信息</text>
+      </view>
+    </view>
+     <view class="cu-item arrow">
+      <view class="content bind" bindtap="" >
+        <text class="cuIcon-service text-grey"></text>
+        <text class="text-black txt">我要面试</text>
+      </view>
+    </view>
+    <view class="cu-item arrow">
+      <view class="content bind" bindtap="" >
+        <text class="cuIcon-mail text-grey"></text>
+        <text class="text-black txt">帮助&反馈</text>
+      </view>
+    </view>
+  </view>
+<button class="cu-btn round lg logout">退出登录</button>
 <view class="cu-bar tabbar margin-bottom-xl bg-white" id='tab'>
     <view class="action text-gray">
       <view class="cuIcon-homefill"></view> 首页
