--- a/pages/rookie/me/index.wxss
+++ b/pages/rookie/me/index.wxss
@@ -20,7 +20,8 @@ page, .page, .page__bd {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #eeece8
+  background-color: #eeece8;
+  overflow: hidden
 }  
 #tab{
   width:750rpx;
@@ -35,14 +36,13 @@ page, .page, .page__bd {
   border-radius:50%;
   display: flex;
   overflow:hidden;
-  text-align: center;
 }
 .blue-back{
   width: 750rpx;
   
   text-align: center;
   position: absolute;
-  height: 33vh;
+  height: 400rpx;
 }
 .blue{
 background-color: #43adef;
@@ -51,14 +51,114 @@ z-index: +1
 .blo{
   z-index: +1;
   width: 600rpx; 
-  height: 160rpx;
+  height: 140rpx;
   position: absolute;
-  top:316rpx;
+  top:330rpx;
   border-radius: 25rpx;
+  vertical-align: center;
 }
 .blo-left{
   border-radius:40rpx 0 0 40rpx; 
 }
 .blo-right{
   border-radius:0 40rpx 40rpx 0; 
+}
+.icon{
+  font-size:50rpx;
+  margin-top:0rpx; 
+}
+.text{
+  margin-top: 3rpx;
+}
+.header{
+    width: 750rpx;
+    height: 300rpx;
+    position: relative;
+    overflow: hidden;
+}
+.header-shadow{
+    width: 800rpx;
+    margin-left: -35rpx;
+    height: 100rpx;
+    background-color: #43adef;
+    transform: rotate(-8deg);
+    box-shadow: 8px 8px 10px #ccc;
+    position: absolute;
+    top: 125rpx;
+}
+.ractangle{
+    width: 750rpx;
+    height: 125rpx;
+    background-color: #43adef;
+    position: relative
+}
+.triangle{
+    width: 0;
+    height: 0;
+    border-width: 10vh 750rpx  0 0;
+    border-style: solid;
+    border-color: #43adef transparent transparent transparent;
+}
+.avatarCircle{
+    width: 160rpx;
+    height: 160rpx;
+    border-radius: 50%;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.7);
+    position: absolute;z-index: 999;
+    top: 100rpx;right: 80rpx;
+    border: 2px solid #eee;
+    padding: 2rpx; 
+    
+}
+.avatarWave{
+    width: 160rpx;
+    height: 160rpx;
+    border-radius: 50%;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.5);
+    top: 100rpx;right: 80rpx;
+    position: absolute;z-index: 998;
+}
+.userinfo-avatar{
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    border-radius:50%;
+    display: flex;
+    overflow:hidden;
+}
+.userinfo-nickname{
+    position: absolute;bottom: -30rpx;left: 70rpx;
+    font-size: 50rpx;
+    font-weight: bold;
+    color: white;
+    z-index: 10;
+}
+.mid-button{
+  width: 750rpx;
+  background:#eeece8;
+  padding: 0rpx;
+  border: none;
+  margin-top:-30rpx; 
+  
+}
+.bloc{
+  width: 360rpx;
+  background-color:#eeece8;
+  
+}
+.bind{
+  text-align: left;
+  
+
+}
+.txt{
+  margin-left: 30rpx;
+}
+.logout{
+  margin-top: 40rpx;
+  background-color:white;
+  color: gray;
+  width: 350rpx;
 }
