--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,7 +4,7 @@
 <image class="logo" src='../../imgs/noodle3.png'></image>
 <view class='welcome'>WELCOME</view>
 
-<button class='new-log' bindtap='baoming'>我是萌新</button>
+<button class='new-log' bindtap='isrookie'>我是萌新</button>
 <button class='cap-log' bindtap='isadmin'>我是部长</button>
 <!-- <image class="logo-bottom" src='../../imgs/house.png'></image> -->
 
