--- a/pages/rookie/me/index.wxml
+++ b/pages/rookie/me/index.wxml
@@ -46,7 +46,7 @@
     </view>
   </view>
 <button class="cu-btn round lg logout">退出登录</button>
-<view class="cu-bar tabbar margin-bottom-xl bg-white" id='tab'>
+<!-- <view class="cu-bar tabbar margin-bottom-xl bg-white" id='tab'>
     <view class="action text-gray">
       <view class="cuIcon-homefill"></view> 首页
     </view>
@@ -61,4 +61,4 @@
       </view>
       我的
     </view>
-  </view>
+  </view> -->
