--- a/pages/rookie/recruit/index.wxss
+++ b/pages/rookie/recruit/index.wxss
@@ -7,10 +7,44 @@ page, .page, .page__bd {
   flex-direction: column;
   align-items: center;
   background-color: #eeece8;
-  overflow: hidden
+  padding-top: 40rpx;
 }  
 #tab{
   width:750rpx;
   position:fixed;
   bottom:-50rpx
+}
+.all-width2{
+  width: 730rpx;
+  margin-bottom:20rpx;
+  border-radius: 40rpx;
+}
+.signup{
+  background-color: white;
+  width: 720rpx;
+  height: 200rpx;
+ border-radius: 30rpx;
+ display:flex;
+align-items:center;
+}
+.touxiang{
+  position:relative;
+  left: 30rpx;
+  float:left;
+  margin-right:40px;
+  margin-left: 30rpx;
+}
+.title{
+  text-align: left;
+  margin-bottom: 5rpx;
+
+}
+.simpleinro{
+text-align: left;
+font-size:25rpx;
+color:#888;
+
+}
+.cont{
+  display: block
 }
