--- a/pages/rookie/recruit/index.wxss
+++ b/pages/rookie/recruit/index.wxss
@@ -1,73 +1,68 @@
 /* pages/rookie/recruit/index.wxss */
-page, .page, .page__bd {
+page,
+.page,
+.page__bd {
   height: 100%;
-  font-family: '黑体';
+  font-family: "黑体";
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #eeece8;
   padding-top: 40rpx;
-}  
+}
 /* #tab{
   width:750rpx;
   position:fixed;
   bottom:-50rpx
-<<<<<<< HEAD
-} */
-=======
-}
-.all-width2{
+}*/
+.all-width2 {
   width: 730rpx;
-  margin-bottom:20rpx;
+  margin-bottom: 20rpx;
   border-radius: 40rpx;
 }
-.signup{
+.signup {
   background-color: white;
   width: 720rpx;
   height: 200rpx;
- border-radius: 30rpx;
- display:flex;
-align-items:center;
+  border-radius: 30rpx;
+  display: flex;
+  align-items: center;
 }
-.touxiang{
-  position:relative;
+.touxiang {
+  position: relative;
   left: 30rpx;
-  float:left;
-  margin-right:40px;
+  float: left;
+  margin-right: 40px;
   margin-left: 30rpx;
 }
-.title{
+.title {
   text-align: left;
   margin-bottom: 5rpx;
   display: flex;
-
 }
-.simpleinro{
-text-align: left;
-font-size:25rpx;
-color:#888;
-width: 380rpx;
-
-}
-.cont{
-  display: block
-}
-.time{
+.simpleinro {
   text-align: left;
-  
-  margin-top: 18rpx;
- /* margin-left: -150rpx; */
-  font-size:20rpx;
-  color:#888;
-
+  font-size: 25rpx;
+  color: #888;
+  width: 380rpx;
 }
-.tag{
+.cont {
+  display: block;
+}
+.time {
+  text-align: left;
+
+  margin-top: 18rpx;
+  /* margin-left: -150rpx; */
+  font-size: 20rpx;
+  color: #888;
+}
+.tag {
   width: 30rpx;
   height: 30rpx;
   border-radius: 20rpx;
   font-size: 20rpx;
-   /* position: absolute;*/
-   margin-left: 130rpx; 
+  /* position: absolute;*/
+  margin-left: 130rpx;
 }
->>>>>>> b5815930b88d617b6501b62792ca05203c2a8367
