--- a/pages/admin/index.wxss
+++ b/pages/admin/index.wxss
@@ -1,4 +1,9 @@
 /* pages/admin/index.wxss */
+.admin-wrapper{
+    height: 90vh;
+    width: 750rpx;
+    overflow: scroll
+}
 .logo{
   margin-top: 80rpx;
   width: 528rpx;
@@ -12,7 +17,7 @@
 page, .page, .page__bd {
   height: 100%;
   font-family: '黑体';
-  text-align: center;
+  /* text-align: center; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,6 +25,8 @@ page, .page, .page__bd {
 }  
 #tab{
   width:750rpx;
+  height: 5vh;
   position:fixed;
-  bottom:-50rpx
+  bottom: 0;
+
 }
