--- a/pages/admin/component/my/my.wxml
+++ b/pages/admin/component/my/my.wxml
@@ -11,33 +11,34 @@
     <view class='header-shadow'></view>
 </view>
 <!-- 列表卡片 -->
- <view class="cu-list menu card-menu margin-top bg-white">
+<view class="cu-list menu margin-top padding">
     <view class="cu-item arrow" bindtap='updataOrgInfo'>
-      <view class="content">
-        <text class="cuIcon-edit text-blue"></text>
-        <text class="text-grey">完善组织信息</text>
-      </view>
+        <view class="content">
+            <text class="cuIcon-edit text-blue"></text>
+            <text class="text-grey">完善组织信息</text>
+        </view>
+    </view>
+    <view class="cu-item arrow" bindtap='gotoManage'>
+        <view class="content">
+            <text class="cuIcon-form text-blue"></text>
+            <text class="text-grey">管理已发布的报名</text>
+        </view>
+    </view>
+    <view class="cu-item arrow">
+        <view class="content">
+            <text class="cuIcon-rank text-blue"></text>
+            <text class="text-grey">查看报名详情</text>
+        </view>
     </view>
     <view class="cu-item">
-      <view class="content">
-        <text class="cuIcon-pic text-blue"></text>
-        <text class="text-grey">组织宣传图</text>
-      </view>
-      <view class="action">
-        <button class="cu-btn round bg-blue shadow">
-          <text class="cuIcon-upload"></text> 上传</button>
-      </view>
+        <view class="content">
+            <text class="cuIcon-pic text-blue"></text>
+            <!-- <image src="{{orgInfo.post_url}}" class="png" mode="aspectFit"></image> -->
+            <text class="text-grey">组织宣传图</text>
+        </view>
+        <view class="action">
+            <button class="cu-btn round bg-blue shadow" bindtap='uploadOrgBanner'>
+                <text class="cuIcon-upload"></text> 上传</button>
+        </view>
     </view>
-    <view class="cu-item arrow">
-      <view class="content">
-        <text class="cuIcon-form text-blue"></text>
-        <text class="text-grey">管理已发布的报名</text>
-      </view>
-    </view>
-    <view class="cu-item arrow">
-      <view class="content">
-        <text class="cuIcon-rank text-blue"></text>
-        <text class="text-grey">查看报名详情</text>
-      </view>
-    </view>
-  </view>
+</view>
