--- a/pages/rookie/recruit/index.wxml
+++ b/pages/rookie/recruit/index.wxml
@@ -3,7 +3,7 @@
     <view slot="footer">尾部内容</view>
 </i-card> -->
 <view class='signup'>
- <view class="cu-avatar xl round touxiang" style="background-image:url(https://ossweb-img.qq.com/images/lol/web201310/skin/big99008.jpg);"></view>
+ <view class="cu-avatar xl round touxiang" style="background-image:url(https://gss0.bdstatic.com/-4o3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike80%2C5%2C5%2C80%2C26/sign=d20bf79eb51c8701c2bbbab44616f54a/00e93901213fb80e879428ad30d12f2eb9389407.jpg);"></view>
 <view class='cont'>
  <view class="title">
       <view class="text-cut title text-blue text-bold" style='font-size:32rpx;'>中南大学学生会</view>
