--- a/pages/rookie/me/index.wxss
+++ b/pages/rookie/me/index.wxss
@@ -18,12 +18,12 @@
 .page,
 page,
 .page__bd {
-  height: 100%;
+  /* height: 100%; */
   font-family: "黑体";
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
   background-color: #eeece8;
   overflow: hidden;
 }
@@ -168,4 +168,7 @@ page,
   background-color: white;
   color: gray;
   width: 350rpx;
+}
+.zindedx{
+  z-index: 1000000;
 }
