--- a/pages/rookie/message/detail.wxml
+++ b/pages/rookie/message/detail.wxml
@@ -1,4 +1,4 @@
-<!--pages/rookie/messege/detail.wxml-->
+<!-- pages/rookie/messege/detail.wxml
 <view class='detail'>
 <view class='text-blue text-bold title'>大学：</view>
 	<view class="cu-form-group margin-top inputView " id="academy">
@@ -8,61 +8,56 @@
 			</view>
 		</picker>
 	</view>
+	</view> -->
+<view class="cu-bar justify-center">
+    <view class="action sub-title">
+      <text class="text-xl text-bold text-blue">个人信息</text>
+      <text class="text-ABC text-blue">Message</text>
+      <!-- last-child选择器-->
+    </view></view>
+<form>
+<view class="cu-form-group margin-top">
+		<view class="title">大学</view>
+		<picker bindchange="PickerChange" value="{{index}}" range="{{picker}}"  range-key="name">
+			<view class="picker">
+				{{index?picker[index].name:'选择大学'}}
+			</view>
+		</picker>
 	</view>
-
-<view class='detail'>
-<view class='text-blue text-bold title'>姓名：</view>
-<view class="inputView"> 
-  <input class="inputText" placeholder="请输入登陆码" value='{{}}' bindinput="" /> 
- </view>
-</view>
-
-<view class='detail'>
-<view class='text-blue text-bold title'>出生年月：</view>
-	<view class="cu-form-group inputView">
-		<picker class="inputText" mode="date" value="{{date}}" start="2015-09-01" end="2020-09-01" bindchange="DateChange">
-			<view class="picker ">
+	<view class="cu-form-group">
+		<view class="title">姓名</view>
+		<input placeholder="" value='{{name}}'></input>
+	</view>
+		<view class="cu-form-group">
+		<view class="title">学号</view>
+		<input placeholder="" value='{{num}}'></input>
+	</view>
+	<view class="cu-form-group">
+		<view class="title">学院</view>
+		<input placeholder="" value='{{academy}}'></input>
+	</view>
+    <view class="cu-form-group">
+		<view class="title">专业班级</view>
+		<input placeholder="" value='{{major}}'></input>
+	</view>
+   <view class="cu-form-group">
+		<view class="title">手机</view>
+		<input placeholder="" value='{{major}}'></input>
+	</view>
+  	<view class="cu-form-group">
+		<view class="title">生日</view>
+		<picker mode="date" value="{{date}}" start="2015-09-01" end="2020-09-01" bindchange="DateChange">
+			<view class="picker">
 				{{date}}
 			</view>
 		</picker>
 	</view>
-  </view>
+ <view class="cu-form-group">
+		<view class="title">邮箱</view>
+		<input placeholder="" value='{{major}}'></input>
+	</view>
+</form>
 
-<view class='detail'>
-<view class='text-blue text-bold title'>手机：</view>
-<view class="inputView"> 
-  <input class="inputText" placeholder="请输入手机" value='{{}}' bindinput=""  type='number'/> 
- </view>
+<view class="padding flex flex-direction align-center">
+  <button class="cu-btn bg-blue margin-tb-sm lg" style='width:400rpx'>确认</button>
 </view>
-
-<view class='detail'>
-<view class='text-blue text-bold title'>学院：</view>
-<view class="inputView"> 
-  <input class="inputText" placeholder="请输入学院" value='{{}}' bindinput=""  type='number'/> 
- </view>
-</view>
-
-<view class='detail'>
-<view class='text-blue text-bold title'>专业班级：</view>
-<view class="inputView"> 
-  <input class="inputText" placeholder="请输入专业班级" value='{{}}' bindinput=""  type='number'/> 
- </view>
-</view>
-
-<view class='detail'>
-<view class='text-blue text-bold title'>学号：</view>
-<view class="inputView"> 
-  <input class="inputText" placeholder="请输入学号" value='{{}}' bindinput=""  type='number'/> 
- </view>
-</view>
-
-<view class='detail'>
-<view class='text-blue text-bold title'>邮箱</view>
-<view class="inputView"> 
-  <input class="inputText" placeholder="请输入邮箱" value='{{}}' bindinput=""  type='number'/> 
- </view>
-</view>
-
- <view class="loginBtnView"> 
-  <button class="loginBtn" size="{{primarySize}}" loading="{{loading}}" plain="{{plain}}" disabled="{{disabled}}" bindtap="">确认</button> 
- </view>
