--- a/pages/rookie/recruitstatus/recruitststus.wxss
+++ b/pages/rookie/recruitstatus/recruitststus.wxss
@@ -1,3 +1,4 @@
+/* pages/rookie/recruitstatus/recruitststus.wxss */
 /* pages/rookie/recruit/index.wxss */
 page,
 .page,
@@ -5,7 +6,7 @@ page,
   height: 100%;
   font-family: "黑体";
   text-align: center;
-  display: flex;
+   display: flex;
   flex-direction: column;
   align-items: center; 
   background-color: #eeece8;
@@ -66,3 +67,4 @@ page,
   /* position: absolute;*/
   margin-left: 130rpx;
 }
+
