--- a/pages/rookie/signup/signup.wxss
+++ b/pages/rookie/signup/signup.wxss
@@ -1,3 +1,4 @@
+/* pages/rookie/signup/signup.wxss */
 /* pages/rookie/recruit/index.wxss */
 page,
 .page,
@@ -5,9 +6,9 @@ page,
   height: 100%;
   font-family: "黑体";
   text-align: center;
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center; 
+  align-items: center; */
   background-color: #eeece8;
   padding-top: 40rpx;
 }
@@ -46,16 +47,14 @@ page,
   font-size: 25rpx;
   color: #888;
   width: 380rpx;
+  margin-bottom: 10rpx;
 }
 .cont {
   display: block;
 }
 .time {
   text-align: left;
-
-  margin-top: 18rpx;
-  /* margin-left: -150rpx; */
-  font-size: 20rpx;
+  font-size: 25rpx;
   color: #888;
 }
 .tag {
