--- a/pages/rookie/recruit/detail/detail.wxml
+++ b/pages/rookie/recruit/detail/detail.wxml
@@ -105,6 +105,6 @@
   </view>
 
 
-  <view class="padding flex flex-direction align-center">
+  <view class="padding flex flex-direction align-center" bindtap='question'>
   <button class="cu-btn bg-blue margin-tb-sm lg" style='width:400rpx'>填写报名</button>
 </view>
