--- a/pages/rookie/signup/signup.wxml
+++ b/pages/rookie/signup/signup.wxml
@@ -1,4 +1,10 @@
 <!--pages/rookie/signup/signup.wxml-->
+<!-- <view class="cu-bar justify-center">
+    <view class="action sub-title">
+      <text class="text-xl text-bold text-blue">我报名的</text>
+      <text class="text-ABC text-blue">SignUp</text>
+
+    </view></view> -->
 <view class='signup'>
  <view class="cu-avatar xl round touxiang" style="background-image:url(https://gss1.bdstatic.com/-vo3dSag_xI4khGkpoWK1HF6hhy/baike/c0%3Dbaike92%2C5%2C5%2C92%2C30/sign=0906e55a07e93901420f856c1a853f82/962bd40735fae6cd0e56f61b09b30f2443a70fed.jpg);"></view>
 <view class='cont'>
