--- a/pages/rookie/signup/signup.wxss
+++ b/pages/rookie/signup/signup.wxss
@@ -6,9 +6,9 @@ page,
   height: 100%;
   font-family: "黑体";
   text-align: center;
-  /* display: flex;
+  display: flex;
   flex-direction: column;
-  align-items: center; */
+  align-items: center; 
   background-color: #eeece8;
   padding-top: 40rpx;
 }
